--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Vadim Prokopchuk",
+  "author": "Pavlovspace",
   "license": "ISC",
   "devDependencies": {
     "animate.css": "^3.7.2",
